# mathematics-for-ML-and-DS

./: LICENSE  pyproject.toml  settings.ini
mathematics_for_ML_and_DS/: _modidx.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
